Add Google Font link to style.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <title>Danny Gilligan</title>
 </head>
 <body>
-    
+    <header>
+        <div class="row">
+            <div class="col-md-4">
+
+            </div>
+            <div class="col-md-8">
+
+            </div>
+        </div>
+    </header>
+    <section>
+
+    </section>
+    <footer>
+
+    </footer>
 </body>
 </html>
