--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 
             </a>
             <div class="col-md-8">
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">
+                            Danny Gilligan
+                        </h1>
+                        <h2 class="title">
+                            Aspiring Full Stack Devloper
+                        </h2>
+
+                    </div>
+                </div>
 
             </div>
         </div>
