Add work history to resume page

--- a/resume.html
+++ b/resume.html
@@ -63,14 +63,32 @@
 
 <!------------------------------------------------------------------- Work History -->
 
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col12">
-                        <h3 class="section-heading uppercase">
+                        <h3 class="history-heading uppercase">
                             Work History
                         </h3>
                     </div>
                 </div>
+                <div class="history-items">
+                <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                    <h4>Job 1</h4>
+                    <p>This will be filled in later</p>
+                </div>
+                <div class="timeline-item" data-dates="04/2004 - 04/2006">
+                    <h4>Job 2</h4>
+                    <p>This will be filled in later</p>
+                </div>
+                <div class="timeline-item" data-dates="04/2010 - 04/2015">
+                    <h4>Job 3</h4>
+                    <p>This will be filled in later</p>
+                </div>
+                <div class="timeline-item" data-dates="04/2015 - Present">
+                    <h4>Job 4</h4>
+                    <p>This will be filled in later</p>
+                </div>
+            </div>
             </div>
 
 <!--------------------------------------------------------------------- My Skills --> 
